--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1031,6 +1031,25 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\WAG6PI45\\Brodribb et al. - 2010 - Viewing leaf structure and evolution from a hydrau.pdf}
 }
 
+@article{brodribbWaterSupplyDemand2011,
+  title = {Water Supply and Demand Remain Balanced during Leaf Acclimation of {{Nothofagus}} Cunninghamii Trees},
+  author = {Brodribb, Timothy J. and Jordan, Gregory J.},
+  date = {2011},
+  journaltitle = {New Phytologist},
+  volume = {192},
+  number = {2},
+  pages = {437--448},
+  issn = {1469-8137},
+  doi = {10.1111/j.1469-8137.2011.03795.x},
+  url = {https://nph.onlinelibrary.wiley.com/doi/abs/10.1111/j.1469-8137.2011.03795.x},
+  urldate = {2021-08-23},
+  abstract = {• Higher leaf vein density (Dvein) enables higher rates of photosynthesis because enhanced water transport allows higher leaf conductances to CO2 and water. If the total cost of leaf venation rises in proportion to the density of minor veins, the most efficient investment in leaf xylem relative to photosynthetic gain should occur when the water transport capacity of the leaf (determined by Dvein) matches potential transpirational demand (determined by stomatal size and density). • We tested whether environmental plasticity in stomatal density (Dstomata) and Dvein were linked in the evergreen tree Nothofagus cunninghamii to achieve a balance between liquid and gas phase water conductances. Two sources of variation were examined; within-tree light acclimation, and differences in sun leaves among plants from ecologically diverse populations. • Strong, linear correlations between Dvein and Dstomata were found at all levels of comparison. The correlations between liquid- and vapour-phase conductances implied by these patterns of leaf anatomy were confirmed by direct measurement of leaf conductance in sun and shade foliage of an individual tree. • Our results provide strong evidence that the development of veins and stomata are coordinated so that photosynthetic yield is optimized relative to carbon investment in leaf venation.},
+  langid = {english},
+  keywords = {economics,leaf hydraulics,optimization,stomata,vein density,xylem},
+  annotation = {\_eprint: https://nph.onlinelibrary.wiley.com/doi/pdf/10.1111/j.1469-8137.2011.03795.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\HKE5VE9A\\Brodribb and Jordan - 2011 - Water supply and demand remain balanced during lea.pdf;C\:\\Users\\Me\\Zotero\\storage\\AJJ38DIX\\j.1469-8137.2011.03795.html}
+}
+
 @article{buckleyHumidityLeavesWhy2019,
   title = {The Humidity inside Leaves and Why You Should Care: Implications of Unsaturation of Leaf Intercellular Airspaces},
   shorttitle = {The Humidity inside Leaves and Why You Should Care},
@@ -8313,6 +8332,26 @@
   keywords = {hydraulic architecture,hydraulic conductivity,hydraulic resistance,leaf water storage,specific leaf area,stomatal conductance},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1046/j.0016-8025.2003.01058.x},
   file = {C\:\\Users\\Me\\Zotero\\storage\\S5IVTJWK\\Sack et al. - 2003 - The ‘hydrology’ of leaves co-ordination of struct.pdf;C\:\\Users\\Me\\Zotero\\storage\\EHWKZNQ7\\j.0016-8025.2003.01058.html}
+}
+
+@article{sackLeafVenationStructure2013,
+  title = {Leaf Venation: Structure, Function, Development, Evolution, Ecology and Applications in the Past, Present and Future},
+  shorttitle = {Leaf Venation},
+  author = {Sack, Lawren and Scoffoni, Christine},
+  date = {2013},
+  journaltitle = {New Phytologist},
+  volume = {198},
+  number = {4},
+  pages = {983--1000},
+  issn = {1469-8137},
+  doi = {10.1111/nph.12253},
+  url = {http://nph.onlinelibrary.wiley.com/doi/abs/10.1111/nph.12253},
+  urldate = {2021-08-23},
+  abstract = {The design and function of leaf venation are important to plant performance, with key implications for the distribution and productivity of ecosystems, and applications in paleobiology, agriculture and technology. We synthesize classical concepts and the recent literature on a wide range of aspects of leaf venation. We describe 10 major structural features that contribute to multiple key functions, and scale up to leaf and plant performance. We describe the development and plasticity of leaf venation and its adaptation across environments globally, and a new global data compilation indicating trends relating vein length per unit area to climate, growth form and habitat worldwide. We synthesize the evolution of vein traits in the major plant lineages throughout paleohistory, highlighting the multiple origins of individual traits. We summarize the strikingly diverse current applications of leaf vein research in multiple fields of science and industry. A unified core understanding will enable an increasing range of plant biologists to incorporate leaf venation into their research. Contents Summary 983 I. Introduction 983 II. Overall structure of the leaf venation 983 III. Function of leaf venation traits: a ‘Rosetta Stone’ 984 IV. Development of the leaf vein system 990 V. Function of the coordinated vein system and scaling up 992 VI. Plasticity, evolution and assembly of leaf vein traits across growth forms, environments and biomes 992 VII. Evolution of the leaf vascular system across plant lineages, paleohistory and biogeography 993 VIII. Applications of leaf venation architecture 995 IX. Conclusions 996 Acknowledgements 996 References 996},
+  langid = {english},
+  keywords = {biological networks,drought tolerance,functional traits,leaf hydraulics,shade tolerance,vasculature,vein patterning},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/nph.12253},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\AHL33FS2\\Sack and Scoffoni - 2013 - Leaf venation structure, function, development, e.pdf;C\:\\Users\\Me\\Zotero\\storage\\B8JB95VS\\nph.html}
 }
 
 @article{sageTemperatureResponseC32007,
