--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -242,13 +242,13 @@ It has been established that independently of the light environment, traits also
 ```
 ---
 nocite: |
-@mau_temperate_2018; @cobleLightDrivesVertical2014; @sackHowStrongIntracanopy2006; @chinLeafAcclimationLight2017; @wykaResponsesLeafStructure2012; @athertonSpatialVariationLeaf2017; @kenzoHeightrelatedChangesLeaf2015; @kusiPlasticLeafMorphology2020; @dangProfilesPhotosyntheticallyActive1997;@gebauerEffectsProlongedDrought2015; @marencoLeafTraitPlasticity2017; @kafutiFoliarWoodTraits2020; @vanwittenbergheVariabilityStomatalConductance2012; @zhang_photosynthetic_2012; @weerasingheCanopyPositionAffects2014; @oldhamHydrostaticGradientNot2010; @ichieEcologicalDistributionLeaf2016; @gregoriouEffectsReducedIrradiance2007; @levizouNondestructiveAssessmentLeaf2005; @liakouraTrichomeDensityIts1997; @fauset_differences_2018; @niinemetsAcclimationHighIrradiance1998; @millenLeafAngleAdaptive1979; @smithShootStructuralEffects1988; @hadleyInfluenceKrummholzMat1987; @panditharathnaChangeLeafStructure2008; @baltzerLeafOpticalResponses2005; @dietzVerticalPatternsDuration2007; @cobleHowVerticalPatterns2016a; @scartazzaInvestigatingEuropeanBeech2016; @duursmaVerticalCanopyGradients2006; @harleyEffectsLightTemperature1996; @hernandezSimilarTemperatureDependence2020; @turnbullScalingFoliarRespiration2003; @chenLeafEconomicsSpectrum2020; @vandewegPhotosyntheticParametersDark2012; @cavaleri_foliar_2008; @konigerXanthophyllCyclePigmentsPhotosynthetic1995;@matsubaraSunshadePatternsLeaf2009; @harrisChangesLeafProperties2013; @hansenVariationPigmentComposition2002a; @poorterLeafOpticalProperties1995; @cobleHowVerticalPatterns2016; @niinemetsCanopyGradientsLeaf2004; @poorterLeafOpticalProperties2000; @taylorNewFieldInstrument2021; @harleyEnvironmentalControlsIsoprene1997; @niinemetsHowLightTemperature2015; @sharkeyFutureIsopreneEmission2014b; @sharkeyFutureIsopreneEmission2014; @simpragaVerticalCanopyGradient2013; @zwienieckiHydraulicLimitationsImposed2004; @sackLeafVenationStructure2013
+@mau_temperate_2018; @cobleLightDrivesVertical2014; @sackHowStrongIntracanopy2006; @chinLeafAcclimationLight2017; @wykaResponsesLeafStructure2012; @athertonSpatialVariationLeaf2017; @kenzoHeightrelatedChangesLeaf2015; @kusiPlasticLeafMorphology2020; @dangProfilesPhotosyntheticallyActive1997;@gebauerEffectsProlongedDrought2015; @marencoLeafTraitPlasticity2017; @kafutiFoliarWoodTraits2020; @vanwittenbergheVariabilityStomatalConductance2012; @zhang_photosynthetic_2012; @weerasingheCanopyPositionAffects2014; @oldhamHydrostaticGradientNot2010; @ichieEcologicalDistributionLeaf2016; @gregoriouEffectsReducedIrradiance2007; @levizouNondestructiveAssessmentLeaf2005; @liakouraTrichomeDensityIts1997; @fauset_differences_2018; @niinemetsAcclimationHighIrradiance1998; @millenLeafAngleAdaptive1979; @smithShootStructuralEffects1988; @hadleyInfluenceKrummholzMat1987; @panditharathnaChangeLeafStructure2008; @baltzerLeafOpticalResponses2005; @dietzVerticalPatternsDuration2007; @cobleHowVerticalPatterns2016a; @scartazzaInvestigatingEuropeanBeech2016; @duursmaVerticalCanopyGradients2006; @harleyEffectsLightTemperature1996; @hernandezSimilarTemperatureDependence2020; @turnbullScalingFoliarRespiration2003; @chenLeafEconomicsSpectrum2020; @vandewegPhotosyntheticParametersDark2012; @cavaleri_foliar_2008; @konigerXanthophyllCyclePigmentsPhotosynthetic1995;@matsubaraSunshadePatternsLeaf2009; @harrisChangesLeafProperties2013; @hansenVariationPigmentComposition2002a; @poorterLeafOpticalProperties1995; @cobleHowVerticalPatterns2016; @niinemetsCanopyGradientsLeaf2004; @poorterLeafOpticalProperties2000; @taylorNewFieldInstrument2021; @harleyEnvironmentalControlsIsoprene1997; @niinemetsHowLightTemperature2015; @sharkeyFutureIsopreneEmission2014b; @sharkeyFutureIsopreneEmission2014; @simpragaVerticalCanopyGradient2013; @zwienieckiHydraulicLimitationsImposed2004; @sackLeafVenationStructure2013; @ballMaintenanceLeafTemperature1988
 ---
 
 
 #### (Anatomical, Morphological and Physiological traits)
 
-Sun leaves have traits that reduce heat and water stress -- for instance, by being smaller, more pubescent, having higher vein density [Table 1, @leighInfluenceLeafSize2017; @vogelSunLeavesShade1968a; @sackHowStrongIntracanopy2006; @zwienieckiHydraulicLimitationsImposed2004;@mathurPhotosyntheticEfficiencySun2018a], and a steeper leaf-angle [@niinemetsAdjustmentFoliageStructure1998, *REF*]. These traits collectively aid heat dissipation and regulate $T_{leaf}$-photosynthetic balance. In contrast, shade leaves have traits that maximize light capture in the diffuse-light environment with sunflecks (e.g., lower LMA), but they are more likely to overheat than sun leaves due to greater thermal capacitance [@leighInfluenceLeafSize2017; @casasSunShadeLeaves2011; @schymanskiStomatalControlLeaf2013b]. In open canopies, where light is comparatively homogeneous, exposed leaves are shaped more by $T_{air_{max}}$ and VPD stress than by light [@mediavillaFoliarPlasticityRelated2019a].
+Sun leaves have traits that reduce heat and water stress -- for instance, by being smaller, more pubescent, having higher vein density [Table 1, @leighInfluenceLeafSize2017; @vogelSunLeavesShade1968a; @sackHowStrongIntracanopy2006; @zwienieckiHydraulicLimitationsImposed2004;@mathurPhotosyntheticEfficiencySun2018a], and a steeper leaf-angle [@niinemetsAdjustmentFoliageStructure1998; @ballMaintenanceLeafTemperature1988]. These traits collectively aid heat dissipation and regulate $T_{leaf}$-photosynthetic balance. In contrast, shade leaves have traits that maximize light capture in the diffuse-light environment with sunflecks (e.g., lower LMA), but they are more likely to overheat than sun leaves due to greater thermal capacitance [@leighInfluenceLeafSize2017; @casasSunShadeLeaves2011; @schymanskiStomatalControlLeaf2013b]. In open canopies, where light is comparatively homogeneous, exposed leaves are shaped more by $T_{air_{max}}$ and VPD stress than by light [@mediavillaFoliarPlasticityRelated2019a].
 
 #### (Biochemical and elemental traits, and isoprene)
 
