--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -460,6 +460,24 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\AG9SE3IS\\Baldocchi et al. - 1997 - Seasonal variation of energy and water vapor excha.pdf}
 }
 
+@article{ballMaintenanceLeafTemperature1988,
+  title = {Maintenance of {{Leaf Temperature}} and the {{Optimisation}} of {{Carbon Gain}} in {{Relation}} to {{Water Loss}} in a {{Tropical Mangrove Forest}}},
+  author = {Ball, M. C. and Cowan, I. R. and Farquhar, G. D.},
+  date = {1988},
+  journaltitle = {Functional Plant Biol.},
+  volume = {15},
+  number = {2},
+  pages = {263--276},
+  publisher = {{CSIRO PUBLISHING}},
+  issn = {1445-4416},
+  doi = {10.1071/pp9880263},
+  url = {https://www.publish.csiro.au/fp/pp9880263},
+  urldate = {2021-08-23},
+  abstract = {Properties and display of foliage were studied in relation to gas exchange characteristics of tropical mangrove species. Rates of assimilation of CO2 were maximal at leaf temperatures of approximately 30°C. The species operated with higher water use efficiencies than do most C3 species, and water-use characteristics became increasingly conservative with increase in the salinity tolerance of the species. Changes in three properties of leaves, i.e. inclination, area, and succulence, contributed to maintenance of leaf temperatures near air temperatures with minimal evaporative cooling. Interspecific differences in water-use characteristics, and their relationship to the maintenance of favourable leaf temperatures, could affect the competitive abilities of mangroves and the structure of mangrove forests.},
+  langid = {english},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\YY8TDBZR\\PP9880263.html}
+}
+
 @article{baltzerLeafOpticalResponses2005,
   title = {Leaf Optical Responses to Light and Soil Nutrient Availability in Temperate Deciduous Trees},
   author = {Baltzer, J. L. and Thomas, S. C.},
