--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -124,7 +124,7 @@ We focus on five key themes (Fig. `r fig_schematic`):
 (5) whole-tree and ecosystem ecology.
 *We then consider the implications for understanding forest responses to global change, including how these responses scale across space and time.* 
 
-![**Figure `r fig_schematic`. Schematic summarizing vertical gradients in forests with dense canopies during daytime growing season conditions.** Patterns summarized here tend to be weaker, or sometimes reversed, under more open canopies, when canopy trees are seasonally deciduous, or at nighttime. Arrows indicate direction of increase, with double-pointed arrows indicating that observations have shown increases both higher and lower in the canopy  [Issue #27](https://github.com/EcoClimLab/vertical-thermal-review/issues/27). ](schematics/Screen Shot 2021-07-19 at 1.10.17 PM.png)
+![**Figure `r fig_schematic`. Schematic summarizing vertical gradients in forests with dense canopies during daytime growing season conditions.** Patterns summarized here tend to be weaker, or sometimes reversed, under more open canopies, when canopy trees are seasonally deciduous, or at nighttime. Arrows indicate direction of increase, with double-pointed arrows indicating that observations have shown increases both higher and lower in the canopy  [Issue #27](https://github.com/EcoClimLab/vertical-thermal-review/issues/27). ](schematics/Schematic figure 1.png)
 
 
 
