--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -3856,6 +3856,15 @@
   urldate = {2021-01-11}
 }
 
+@article{ipccClimateChangeWidespread2021,
+  title = {Climate Change Widespread, Rapid, and Intensifying – {{IPCC}} — {{IPCC}}},
+  author = {IPCC},
+  date = {2021},
+  url = {https://www.ipcc.ch/2021/08/09/ar6-wg1-20210809-pr/},
+  urldate = {2021-08-24},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\GWPYJKJG\\IPCC_AR6_WGI_Full_Report.pdf;C\:\\Users\\Me\\Zotero\\storage\\NNHQ9D5E\\IPCC_AR6_WGI_Full_Report.pdf;C\:\\Users\\Me\\Zotero\\storage\\QVS8HZLX\\ar6-wg1-20210809-pr.html}
+}
+
 @article{irmakScalingLeafStomatal2008,
   title = {On the Scaling up Leaf Stomatal Resistance to Canopy Resistance Using Photosynthetic Photon Flux Density},
   author = {Irmak, S. and Mutiibwa, D. and Irmak, A. and Arkebauer, T. J. and Weiss, A. and Martin, D. L. and Eisenhauer, D. E.},
